_generated-doc/2.7/config/quarkus-live-reload-live-reload-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-live-reload-live-reload-config_configuration]]link:#quarkus-live-reload-live-reload-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-live-reload-live-reload-config_quarkus.live-reload.instrumentation]]`link:#quarkus-live-reload-live-reload-config_quarkus.live-reload.instrumentation[quarkus.live-reload.instrumentation]`

[.description]
--
Whether or not Quarkus should enable its ability to not do a full restart when changes to classes are compatible with JVM instrumentation. If this is set to true, Quarkus will perform class redefinition when possible.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-live-reload-live-reload-config_quarkus.live-reload.watched-resources]]`link:#quarkus-live-reload-live-reload-config_quarkus.live-reload.watched-resources[quarkus.live-reload.watched-resources]`

[.description]
--
The names of additional resource files to watch for changes, triggering a reload on change. Directories are *not* supported.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-live-reload-live-reload-config_quarkus.live-reload.password]]`link:#quarkus-live-reload-live-reload-config_quarkus.live-reload.password[quarkus.live-reload.password]`

[.description]
--
Password used to use to connect to the remote dev-mode application
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-live-reload-live-reload-config_quarkus.live-reload.url]]`link:#quarkus-live-reload-live-reload-config_quarkus.live-reload.url[quarkus.live-reload.url]`

[.description]
--
URL used to use to connect to the remote dev-mode application
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-live-reload-live-reload-config_quarkus.live-reload.connect-timeout]]`link:#quarkus-live-reload-live-reload-config_quarkus.live-reload.connect-timeout[quarkus.live-reload.connect-timeout]`

[.description]
--
The amount of time to wait for a remote dev connect or reconnect
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30S`


a|icon:lock[title=Fixed at build time] [[quarkus-live-reload-live-reload-config_quarkus.live-reload.retry-interval]]`link:#quarkus-live-reload-live-reload-config_quarkus.live-reload.retry-interval[quarkus.live-reload.retry-interval]`

[.description]
--
The amount of time to wait between attempts when connecting to the server side of remote dev
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`2S`


a|icon:lock[title=Fixed at build time] [[quarkus-live-reload-live-reload-config_quarkus.live-reload.retry-max-attempts]]`link:#quarkus-live-reload-live-reload-config_quarkus.live-reload.retry-max-attempts[quarkus.live-reload.retry-max-attempts]`

[.description]
--
The maximum number of attempts when connecting to the server side of remote dev
--|int 
|`10`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
